LinkedIn link update

--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ nav:
       icon: fa-github-alt
 
     - name: LinkedIn
-      href: https://ca.linkedin.com/in/itsnauman
+      href: https://www.linkedin.com/pub/nauman-ahmad/b8/91/7b3
       icon: fa-linkedin
 
     - name: Email
