--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,4 +11,4 @@
   url: https://linkedin.com/in/nauman-ahmad-7b3091b8
 
 - title: resume
-  url: https://www.dropbox.com/s/hcckxsqlu7rm9bk/Latest%20Resume.pdf?dl=0
+  url: https://www.dropbox.com/s/o0ll6y1bjk8ailh/Resume%2027-07-2017.pdf?dl=0
